Alterados nomes de entidades, atributos e chamada gravarBatalha
Alterada chamada para gravar Batalha, alterado nome da entidade para TURNO, alterado atributo para batalhaId, implementado findAllOrderByBatalhaIdAsc, atualizado Swagger e data.sql
