# src/main/java/br/edu/infnet/projetodebloco/heroigen/controller/RankingController.java
@@ -12,6 +12,7 @@ import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -35,30 +36,24 @@ public class RankingController {
 	public ResponseEntity<String> getRanking() {
 		
 		List<ItemRanking> ranking = rankingService.getRanking();
-		
 		if (ranking.size() == 0)
 			return ResponseEntity.status(HttpStatus.NOT_FOUND)
 					.contentType(MediaType.TEXT_PLAIN).body("Ranking vazio!");
-		
 		return ResponseEntity.ok()
 				.contentType(MediaType.APPLICATION_JSON).body(ranking.toString());
 	}
 	
-	@PostMapping(value = "", produces = MediaType.APPLICATION_JSON_VALUE)
-	public ResponseEntity<String> gravarRanking(@Valid @RequestBody RankingRequest request) throws URISyntaxException {
+	@PostMapping(value = "/{batalhaId}", produces = MediaType.APPLICATION_JSON_VALUE)
+	public ResponseEntity<String> gravarBatalha(@Valid @PathVariable("batalhaId") Integer batalhaId) {
 
-		ResponseEntity<String> response = new ResponseEntity<String>(HttpStatus.INTERNAL_SERVER_ERROR);
+		log.info("\n\n A batalha a ser rankeada é:\n{}", batalhaId);
 		
-		log.info("\n\n A batalha a ser rankeada é:\n{}", request.getIdBatalha());
-		
-		if (!rankingService.calculaRanking(request.getIdBatalha())) {
-			response = ResponseEntity.badRequest().contentType(MediaType.TEXT_PLAIN)
+		if (!rankingService.calculaRanking(batalhaId)) {
+			return ResponseEntity.badRequest().contentType(MediaType.TEXT_PLAIN)
 			.body(rankingService.getErrorMessage());
 		} else {
-			response = ResponseEntity.created(null).contentType(MediaType.TEXT_PLAIN)
+			return ResponseEntity.created(null).contentType(MediaType.TEXT_PLAIN)
 					.body("Inserido no ranking com sucesso!");
 		}
-			
-		return response;
 	}
 }
