# src/main/resources/swagger/swaggerHeroi-Gen.yaml
@@ -112,12 +112,14 @@ paths:
           description: "Formato de turno inválido"
         "404":
           description: "Batalha não localizada"
+        "422":
+          description: "Unprocessabled Entity"
   /ranking:
     get:
       tags:
       - "ranking"
       summary: "Retorna o ranking de pontuação"
-      description: "Retorna um array com a pontuação final de todas as batalhas em ordem decrescente"
+      description: "Retorna um array com a pontuação final (em ordem decrescente) de todas as batalhas encerradas"
       operationId: "getRanking"
       produces:
         - "application/json"
@@ -131,7 +133,7 @@ paths:
               $ref: "#/definitions/Ranking"
         "404":
           description: "Nenhuma batalha foi encerrada"
-  /ranking/{idBatalha}:
+  /ranking/{batalhaId}:
     post:
       tags:
       - "ranking"
@@ -144,7 +146,7 @@ paths:
       - "text/plain"
       parameters:
       - in: "path"
-        name: "idBatalha"
+        name: "batalhaId"
         description: "Id da Batalha a salvar"
         required: true
         type: "integer"
@@ -195,7 +197,7 @@ definitions:
   Turno:
     type: "object"
     required:
-    - "id_batalha"
+    - "batalhaId"
     - "usuario"
     - "heroi"
     - "monstro"
@@ -205,7 +207,7 @@ definitions:
       id:
         type: "integer"
         format: "int64"
-      idBatalha:
+      batalhaId:
         type: "integer"
         format: "int64"
       usuario:
@@ -230,7 +232,7 @@ definitions:
     type: "object"
     required:
     - "posicao"
-    - "idBatalha"
+    - "batalhaId"
     - "usuario"
     - "pontuacao"
     properties:
@@ -240,7 +242,7 @@ definitions:
       posicao:
         type: "integer"
         format: "int64"
-      idBatalha:
+      batalhaId:
         type: "integer"
         format: "int64"
         example: "Guerreiro"
